--- a/posts.html
+++ b/posts.html
@@ -14,13 +14,20 @@ button { cursor:pointer; margin:5px; padding:8px 12px; border-radius:8px; border
 .comment { border-top:1px solid #eee; padding:8px 0; display:flex; justify-content:space-between; align-items:center; }
 .comment b { margin-right:5px; cursor:pointer; color:blue; text-decoration:underline; }
 #add-comment-btn, #back-btn { margin-top:10px; padding:8px 12px; border-radius:5px; border:1px solid #ccc; background:#111; color:#fff; cursor:pointer; display:none; }
-.reply-btn { margin-left:5px; padding:2px 6px; border-radius:4px; cursor:pointer; }
+.reply-btn { margin-left:5px; padding:2px 6px; border-radius:4px; cursor:pointer; background: #eee; border: 1px solid #ccc; }
+
+/* New UI Styles */
+#comment-ui { margin-top: 15px; display: none; flex-direction: column; gap: 10px; border-top: 2px solid #eee; padding-top: 15px; }
+#comment-text { width: 100%; height: 80px; border-radius: 8px; border: 1px solid #ccc; padding: 10px; box-sizing: border-box; font-family: inherit; }
+.comment-actions { display: flex; gap: 10px; }
+#submit-comment-btn { background: #007bff; color: white; padding: 8px 16px; border-radius: 5px; border: none; cursor: pointer; }
+#cancel-comment-btn { background: #eee; color: #333; padding: 8px 16px; border-radius: 5px; border: none; cursor: pointer; }
 </style>
 </head>
 <body>
 
 <header>
-  <h1>Perspective</h1>
+  <h1 style="cursor:pointer">Perspective</h1>
   <div id="top-buttons">
     <button id="login-btn">Login / Register</button>
     <button id="account-btn">Account</button>
@@ -37,18 +44,27 @@ button { cursor:pointer; margin:5px; padding:8px 12px; border-radius:8px; border
     <button class="reaction-btn" data-reaction="fire">🔥 0</button>
     <button class="reaction-btn" data-reaction="insight">💡 0</button>
   </div>
+
   <div class="comments" id="comments">
     <h3>Comments</h3>
     <div id="comments-list"></div>
     <button id="add-comment-btn">Add Comment</button>
+
+    <div id="comment-ui">
+      <textarea id="comment-text" placeholder="Write your thoughts..."></textarea>
+      <div class="comment-actions">
+        <button id="submit-comment-btn" style="display:inline-block">Post Comment</button>
+        <button id="cancel-comment-btn" style="display:inline-block">Cancel</button>
+      </div>
+    </div>
   </div>
-  <button id="back-btn">Back</button>
+  <button id="back-btn" style="display:inline-block">Back</button>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
 import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-import { getFirestore, doc, getDoc, updateDoc, increment } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+import { getFirestore, doc, getDoc, updateDoc, increment, arrayUnion } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyBeslEXxh_2j9dLiwAgeRL3p11iqgWfMgo",
@@ -76,6 +92,12 @@ const reactionsEl = document.getElementById("reactions");
 const commentsListEl = document.getElementById("comments-list");
 const addCommentBtn = document.getElementById("add-comment-btn");
 const backBtn = document.getElementById("back-btn");
+
+// Comment UI DOM
+const commentUi = document.getElementById("comment-ui");
+const commentText = document.getElementById("comment-text");
+const submitCommentBtn = document.getElementById("submit-comment-btn");
+const cancelCommentBtn = document.getElementById("cancel-comment-btn");
 
 // Toggle top buttons
 document.querySelector("header h1").addEventListener("click", () => {
@@ -137,7 +159,7 @@ async function loadPost(){
     .forEach(c=>{
       const div = document.createElement("div");
       div.className="comment";
-      div.innerHTML = `<b class="comment-user" data-uid="${c.authorId}">${escapeHTML(c.authorName)}</b>: ${escapeHTML(c.text)}
+      div.innerHTML = `<span><b class="comment-user" data-uid="${c.authorId}">${escapeHTML(c.authorName)}</b>: ${escapeHTML(c.text)}</span>
         <button class="reply-btn">Reply</button>`;
 
       // Username click → account
@@ -146,18 +168,58 @@ async function loadPost(){
         window.location.href = `account.html?uid=${uid}`;
       };
 
-      // Reply click → comments.html
+      // Reply click → Open UI with @handle
       div.querySelector(".reply-btn").onclick = ()=>{
-        window.location.href = `comments.html?postId=${postId}&replyTo=${c.authorId}`;
+        if(!currentUser) return alert("Login to reply!");
+        showCommentUi(`@${c.authorName} `);
       };
 
       commentsListEl.appendChild(div);
     });
 }
 
-// Go to comments.html to add comment
-addCommentBtn.onclick = ()=>{
-  window.location.href = `comments.html?postId=${postId}`;
+// Show/Hide Comment UI
+function showCommentUi(initialText = ""){
+  commentUi.style.display = "flex";
+  addCommentBtn.style.display = "none";
+  commentText.value = initialText;
+  commentText.focus();
+}
+
+cancelCommentBtn.onclick = () => {
+  commentUi.style.display = "none";
+  addCommentBtn.style.display = "inline-block";
+  commentText.value = "";
+};
+
+addCommentBtn.onclick = () => {
+  showCommentUi();
+};
+
+submitCommentBtn.onclick = async () => {
+  const text = commentText.value.trim();
+  if(!text) return;
+  if(!currentUser) return alert("Please login first.");
+
+  const newComment = {
+    authorId: currentUser.uid,
+    authorName: currentUser.displayName || "Anonymous",
+    text: text,
+    createdAt: new Date().toISOString()
+  };
+
+  try {
+    await updateDoc(doc(db,"artifacts",appId,"public","data","posts",postId), {
+      comments: arrayUnion(newComment)
+    });
+    commentText.value = "";
+    commentUi.style.display = "none";
+    addCommentBtn.style.display = "inline-block";
+    loadPost();
+  } catch(e) {
+    console.error(e);
+    alert("Error posting comment.");
+  }
 };
 
 function escapeHTML(str){
